# aws-desktop-center

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  tauri.conf.json
doc/en/: executive-summary.md  functional-documentation.md  technical-documentation.md
doc/es/: documentacion-funcional.md  documentacion-tecnica.md  resumen-ejecutivo.md
src/: main.rs
src/aws_services/: account.rs  acm.rs  apigateway.rs  apigatewayv2.rs  appconfig.rs  appsync.rs  athena.rs  autoscaling.rs  awsconfig.rs  backup.rs  batch.rs  cloudformation.rs  cloudfront.rs  cloudfrontkvs.rs  cloudtrail.rs  cloudwatch.rs  codebuild.rs  codedeploy.rs  codepipeline.rs  cognito.rs  costandusagereport.rs  costexplorer.rs  docdb.rs  dynamodb.rs  dynamodbstreams.rs  ebs.rs  ec2.rs  ecr.rs  ecs.rs  efs.rs  eks.rs  elasticache.rs  elasticbeanstalk.rs  elbv2.rs  emr.rs  eventbridge.rs  firehose.rs  glue.rs  iam.rs  inspector2.rs  (+35 more)
ui/: app.js  icons.js  index.html  styles.css
ui/services/: account.js  acm.js  apigateway.js  apigatewayv2.js  appconfig.js  appsync.js  athena.js  autoscaling.js  awsconfig.js  backup.js  batch.js  cloudformation.js  cloudfront.js  cloudfrontkvs.js  cloudmap.js  cloudtrail.js  cloudwatch.js  codebuild.js  codedeploy.js  codepipeline.js  cognito.js  costandusagereport.js  costexplorer.js  docdb.js  dynamodb.js  ebs.js  ec2.js  ecr.js  ecs.js  efs.js  eks.js  elasticache.js  elasticbeanstalk.js  elbv2.js  emr.js  eventbridge.js  firehose.js  glue.js  iam.js  inspector2.js  (+34 more)
