[package]
name = "aws-data-center"
version = "0.1.0"
edition = "2021"
description = "AWS Data Services Media Center - Kodi-style interface (Tauri + Rust)"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
aws-config = "1"
aws-sdk-s3 = "1"
aws-sdk-dynamodb = "1"
aws-sdk-glue = "1"
aws-sdk-athena = "1"
aws-sdk-rds = "1"
aws-sdk-redshift = "1"
aws-sdk-redshiftdata = "1"
aws-sdk-lakeformation = "1"
aws-sdk-sts = "1"
aws-sdk-lambda = "1"
aws-sdk-cloudwatch = "1"
aws-sdk-cloudwatchlogs = "1"
aws-sdk-eventbridge = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
zip = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
