[package]
name = "aws-desktop-center"
version = "0.1.0"
edition = "2021"
description = "AWS Data Services Media Center - Kodi-style interface (Tauri + Rust)"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
aws-config = "1"
aws-sdk-s3 = "1"
aws-sdk-dynamodb = "1"
aws-sdk-glue = "1"
aws-sdk-athena = "1"
aws-sdk-rds = "1"
aws-sdk-redshift = "1"
aws-sdk-redshiftdata = "1"
aws-sdk-lakeformation = "1"
aws-sdk-sts = "1"
aws-sdk-lambda = "1"
aws-sdk-cloudwatch = "1"
aws-sdk-cloudwatchlogs = "1"
aws-sdk-eventbridge = "1"
aws-sdk-ec2 = "1"
aws-sdk-ecs = "1"
aws-sdk-ecr = "1"
aws-sdk-eks = "1"
aws-sdk-batch = "1"
aws-sdk-codebuild = "1"
aws-sdk-elasticbeanstalk = "1"
aws-sdk-efs = "1"
aws-sdk-backup = "1"
aws-sdk-s3tables = "1"
aws-sdk-s3vectors = "1"
aws-sdk-s3files = "1"
aws-sdk-sqs = "1"
aws-sdk-sns = "1"
aws-sdk-sfn = "1"
aws-sdk-scheduler = "1"
aws-sdk-pipes = "1"
aws-sdk-mq = "1"
aws-sdk-iam = "1"
aws-sdk-secretsmanager = "1"
aws-sdk-ssm = "1"
aws-sdk-kms = "1"
aws-sdk-cognitoidentityprovider = "1"
aws-sdk-acm = "1"
aws-sdk-wafv2 = "1"
aws-sdk-inspector2 = "1"
aws-sdk-elasticache = "1"
aws-sdk-memorydb = "1"
aws-sdk-docdb = "1"
aws-sdk-neptune = "1"
aws-sdk-opensearch = "1"
aws-sdk-rdsdata = "1"
aws-sdk-dynamodbstreams = "1"
aws-sdk-kinesis = "1"
aws-sdk-firehose = "1"
aws-sdk-emr = "1"
aws-sdk-kafka = "1"
aws-sdk-apigateway = "1"
aws-sdk-apigatewayv2 = "1"
aws-sdk-route53 = "1"
aws-sdk-cloudfront = "1"
aws-sdk-elasticloadbalancingv2 = "1"
aws-sdk-appsync = "1"
aws-sdk-servicediscovery = "1"
aws-sdk-cloudformation = "1"
aws-sdk-autoscaling = "1"
aws-sdk-appconfig = "1"
aws-sdk-resourcegroupstagging = "1"
aws-sdk-config = "1"
aws-sdk-cloudtrail = "1"
aws-sdk-organizations = "1"
aws-sdk-account = "1"
aws-sdk-codedeploy = "1"
aws-sdk-codepipeline = "1"
aws-sdk-costexplorer = "1"
aws-sdk-pricing = "1"
aws-sdk-costandusagereport = "1"
aws-sdk-sesv2 = "1"
aws-sdk-transfer = "1"
aws-sdk-iot = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
zip = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
